# job-squire

./: .dockerignore  .gitignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  docker-compose.single.yml  docker-compose.swag.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh  update.sh  wsgi.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/wiki/: FAQ.md  Home.md  Setup-Guide.md
.github/workflows/: ci.yml  cli.yml  codeql.yml  docker-publish.yml  release.yml  tests.yml
app/: __init__.py  ai.py  auth.py  backup.py  backup_cli.py  candidate_profile.md  crypto.py  db_utils.py  deploy.py  docgen.py  extensions.py  forms.py  kit_export.py  main.py  mcp_auth.py  mcp_server.py  models.py  notify.py  ollama_provider_cli.py  onboarding.py  privacy.py  prompts.py  providers.py  resume_convert.py  sample_locations.py  search.py  timezones.py  websearch.py  worker.py
app/static/: app.js  style.css  theme-init.js
app/templates/: account.html  ai_hub.html  base.html  contact_detail.html  contact_form.html  contacts.html  dashboard.html  getting_started.html  getting_started_step.html  guide.html  interview_form.html  job_detail.html  job_form.html  jobs.html  kit_batch.html  (+10 more)
docs/: API-Reference.md  FAQ.md  Home.md  Job_Squire_User_Guide.md  PLAN-ai-privacy.md  PLAN-deployment-modes.md  PLAN-deployment-open-questions-prompt.md  PLAN-multi-provider-ai.md  PLAN-ollama-assist.md  PLAN-onboarding.md  PROMPTS-deployment-cli.md  PROMPTS-deployment-modes.md  README.md  Setup-Guide.md  adopt-single-container.md  architecture.md  backup-restore.md  code-reference.md  configuration.md  deployment.md  job-squire-cli.md  mcp-connector.md  mcp-setup-guide.md  multi-instance.md  troubleshooting.md
examples/: .env.example
job_squire_cli/: README.md  pyproject.toml
job_squire_cli/job_squire_cli/: __init__.py  cli.py
job_squire_cli/job_squire_cli/ops/: __init__.py  backup.py  backup_crypto.py  commands.py  compose.py  crypto_mirror.py  dns.py  dotenv.py  lifecycle.py  mcp_token.py  ollama_assist.py  paths.py  ports.py  proxy.py  registry.py  runtime.py  secrets_copy.py  self_update.py  tailscale.py  uninstall.py
job_squire_cli/job_squire_cli/query/: __init__.py  commands.py  config.py  mcp_client.py
job_squire_cli/scripts/: generate_sbom.py
job_squire_cli/tests/: test_backup.py  test_backup_crypto.py  test_cli_grammar.py  test_compose.py  test_configure.py  test_dns.py  test_dotenv.py  test_lifecycle.py  test_mcp_client.py  test_mcp_token.py  test_ollama_assist.py  test_ollama_cli.py  test_ops_commands.py  test_paths.py  test_ports.py  test_proxy.py  test_query_commands.py  test_query_config.py  test_registry.py  test_runtime.py  test_secrets_copy.py  test_self_update.py  test_tailscale.py  test_uninstall.py
sbom/: job-squire.cdx.json
scripts/: adopt-single-container.sh  backup.sh  generate_sbom.py  restore.sh  stamp_cli_version.py
tests/: conftest.py  test_adopt.py  test_ai_chunking.py  test_ai_context_capacity.py  test_auth.py  test_backup.py  test_crypto.py  test_deploy.py  test_mcp_auth.py  test_mcp_server.py  test_migrations.py  test_no_raw_commits.py  test_ollama_provider_cli.py  test_onboarding.py  test_ops.py  test_privacy.py  test_providers.py  test_resume_convert.py  test_search_progress.py  test_search_run_resilience.py  test_search_settings.py  test_smtp_settings.py  test_triage_batch_retry.py
(+30 files in other folders)
