[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-squire-cli"
# Stamped by scripts/stamp_cli_version.py (repo root) from the shared VERSION
# file plus the current commit's short SHA -- see docs/job-squire-cli.md
# ("Versioning") for the one rule that replaces the old 0.1.0-<sha> /
# 0.1.0+<sha> split. The committed value here is a placeholder between stamps.
version = "0.5.0+dev"
description = "job-squire deployment CLI and MCP query client"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "click>=8.0",
]

# The query group (health/list/pipeline/contacts/job/contact/followups) talks
# to a running instance over MCP and renders with rich. The deployment group
# only needs click. Keeping these optional means a deployment-only install
# never pulls in the query stack, and never needs a live MCP endpoint.
[project.optional-dependencies]
query = [
    "rich>=13.0",
    "mcp>=1.28.1",
    "anyio>=4.0",
    "httpx>=0.27",
]

# job-squire is the canonical command; jobsquire is kept as an alias to the
# same entry point so existing jobsquire-cli usage keeps working.
[project.scripts]
job-squire = "job_squire_cli.cli:main"
jobsquire = "job_squire_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["job_squire_cli"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
